--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.9.5
 aiosignal==1.3.1
+altgraph==0.17.4
 annotated-types==0.6.0
 anyio==4.3.0
 argon2-cffi==23.1.0
@@ -45,6 +46,7 @@ llama-index-readers-llama-parse==0.1.4
 llama-index-vector-stores-milvus==0.1.10
 llama-parse==0.4.2
 llamaindex-py-client==0.1.19
+macholib==1.16.3
 marshmallow==3.21.1
 milvus==2.3.5
 minio==7.2.6
@@ -65,6 +67,8 @@ pycryptodome==3.20.0
 pydantic==2.7.1
 pydantic_core==2.18.2
 pygame==2.5.2
+pyinstaller==6.6.0
+pyinstaller-hooks-contrib==2024.5
 pymilvus==2.4.1
 pypdf==4.2.0
 python-dateutil==2.9.0.post0
